--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -2817,6 +2817,126 @@ var minDepth = function(root) {
 };
 ```
 
+## 112.路径总和
+
+给你二叉树的根节点 root 和一个表示目标和的整数 targetSum 。判断该树中是否存在 根节点到叶子节点 的路径，这条路径上所有节点值相加等于目标和 targetSum 。如果存在，返回 true ；否则，返回 false 。
+
+叶子节点 是指没有子节点的节点。
+
+方法一：广度优先搜索
+
+首先我们可以想到使用广度优先搜索的方式，记录从根节点到当前节点的路径和，以防止重复计算。
+
+这样我们使用两个队列，分别存储将要遍历的节点，以及根节点到这些节点的路径和即可。
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @param {number} targetSum
+ * @return {boolean}
+ */
+var hasPathSum = function(root, targetSum) {
+    if (root===null) {
+        return false;
+    }
+    let result=[root];
+    while(result.length>0){
+        let len=result.length;
+        while(len>0){
+            let node=result.shift();
+            if (node.left!==null) {
+                node.left.val+=node.val;
+                result.push(node.left);
+            }
+            if (node.right!==null) {
+                node.right.val+=node.val;
+                result.push(node.right);
+            }
+            if (node.left===null && node.right===null) {
+                if (node.val===targetSum) {
+                    return true;
+                }
+            }
+            len--;
+        }
+    }
+    return false;
+};
+```
+
+方法二：递归
+
+观察要求我们完成的函数，我们可以归纳出它的功能：询问是否存在从当前节点 root 到叶子节点的路径，满足其路径和为 sum。
+
+假定从根节点到当前节点的值之和为 val，我们可以将这个大问题转化为一个小问题：是否存在从当前节点的子节点到叶子的路径，满足其路径和为 sum - val。
+
+不难发现这满足递归的性质，若当前节点就是叶子节点，那么我们直接判断 sum 是否等于 val 即可（因为路径和已经确定，就是当前节点的值，我们只需要判断该路径和是否满足条件）。若当前节点不是叶子节点，我们只需要递归地询问它的子节点是否能满足条件即可。
+
+```js
+var hasPathSum = function(root, targetSum) {
+    if (root===null) {
+        return false;
+    }
+    if (root.left===null && root.right===null) {
+        return targetSum===root.val;
+    }
+    return hasPathSum(root.left,targetSum-root.val) || hasPathSum(root.right,targetSum-root.val);
+};
+```
+
+## 118.杨辉三角
+
+给定一个非负整数 numRows，生成「杨辉三角」的前 numRows 行。
+
+在「杨辉三角」中，每个数是它左上方和右上方的数的和。
+提示:
+
+1 <= numRows <= 30
+
+```js
+/**
+ * @param {number} numRows
+ * @return {number[][]}
+ */
+var generate = function(numRows) {
+    let result=[[1]];
+    for(n=2;n<=numRows;n++){
+        let arr=new Array(n);
+        arr[0]=1;
+        arr[n-1]=1;
+        for(i=1;i<n-1;i++){
+            arr[i]=result[n-2][i-1]+result[n-2][i];
+        }
+        result.push(arr);
+    }
+    return result;
+};
+
+let test=5;
+let result=generate(test);
+console.log(result);
+```
+
+119. 杨辉三角 II
+给定一个非负索引 rowIndex，返回「杨辉三角」的第 rowIndex 行。
+
+在「杨辉三角」中，每个数是它左上方和右上方的数的和。
+提示:
+
+0 <= rowIndex <= 33
+
+```
+
+```
+
 
 
 ## 208. 实现 Trie (前缀树)
