--- a/牛客/牛客算法.md
+++ b/牛客/牛客算法.md
@@ -1,6 +1,6 @@
 ## **NC1** **大数加法**
 
-## 描述
+描述
 
 以字符串的形式读入两个数字，编写一个函数计算它们的和，以字符串形式返回。
 
@@ -26,4 +26,62 @@ module.exports = {
 ```
 
 涉及大数加法
+
+## **NC65** **斐波那契数列**
+
+大家都知道斐波那契数列，现在要求输入一个正整数 n ，请你输出斐波那契数列的第 n 项。
+
+要求：空间复杂度 O*(1)，时间复杂度 O*(*n*) ，本题也有时间复杂度 O(logn) 的解法
+
+```js
+function Fibonacci(n){
+    // write code here
+    if (n===1 || n===2) {
+        return 1;
+    }
+    let i=3;
+    let f1=1;
+    let f2=1;
+    let f3=0;
+    while(i<=n){
+        f3=f1+f2;
+        f1=f2;
+        f2=f3;
+        i++;
+    }
+    return f3;
+    //return Fibonacci(n-1)+Fibonacci(n-2)
+}
+module.exports = {
+    Fibonacci : Fibonacci
+};
+```
+
+```
+
+```
+
+## **NC103** **反转字符串**
+
+写出一个程序，接受一个字符串，然后输出该字符串反转后的字符串。（字符串长度不超过1000）
+
+```javascript
+/**
+ * 反转字符串
+ * @param str string字符串 
+ * @return string字符串
+ */
+function solve( str ) {
+    // write code here
+    //return str.split("").reverse().join("");
+    let newStr="";
+    for (let i=str.length-1;i>=0;i--){
+        newStr+=str[i];
+    }
+    return newStr;
+}
+module.exports = {
+    solve : solve
+};
+```
 
