--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -2138,6 +2138,89 @@ var merge = function(nums1, m, nums2, n) {
 };
 ```
 
+## 89.格雷编码
+
+n 位格雷码序列 是一个由 2n 个整数组成的序列，其中：
+
+- 每个整数都在范围 [0, 2n - 1] 内（含 0 和 2n - 1）
+- 第一个整数是 0
+- 一个整数在序列中出现 不超过一次
+- 每对 相邻 整数的二进制表示 恰好一位不同 ，且
+- 第一个 和 最后一个 整数的二进制表示 恰好一位不同
+
+给你一个整数 n ，返回任一有效的 n 位格雷码序列 。
+
+1 <= n <= 16
+
+方法一：对称生成
+
+```js
+/**
+ * @param {number} n
+ * @return {number[]}
+ */
+var grayCode = function(n) {
+    let result=[0];
+    for (let i=1;i<=n;i++){
+        let len=result.length;
+        while(len>0){
+            //对此生成
+            result.push(result[--len] | (1<<(i-1)));
+            //console.log(result[j] | (1<<(i-1)));
+        }
+    }
+    return result;
+};
+```
+
+```
+/**
+ * @param {number} n
+ * @return {number[]}
+ */
+var grayCode = function(n) {
+    let maxValue=Math.pow(2,n)-1;
+    let maxValueHex=maxValue.toString(2);
+    let maxLen=maxValueHex.length;
+    let arr=new Array(maxLen).fill("0");
+    let hexs=[];
+    for (let i=0;i<Math.pow(2,n);i++){
+        let hex=(arr.join("")+i.toString(2)).slice(-maxLen);
+        hexs.push(hex);
+        //console.log(hex);
+    }
+    let newArr=[];
+    for (let i=0;i<Math.pow(2,n);i++){
+        
+    }
+    return 0;
+};
+
+let test=5;
+let result=grayCode(test);
+console.log(result);
+```
+
+方法二：二进制数转格雷码
+
+```js
+/**
+ * @param {number} n
+ * @return {number[]}
+ */
+var grayCode = function(n) {
+    let result=[];
+    for (let i=0;i<1<<n;i++){
+        result.push((i>>1)^i);
+    }
+    return result;
+};
+
+let test=5;
+let result=grayCode(test);
+console.log(result);
+```
+
 
 
 ## 94.二叉树的中序遍历
@@ -2925,7 +3008,8 @@ let result=generate(test);
 console.log(result);
 ```
 
-119. 杨辉三角 II
+## 119.杨辉三角 II
+
 给定一个非负索引 rowIndex，返回「杨辉三角」的第 rowIndex 行。
 
 在「杨辉三角」中，每个数是它左上方和右上方的数的和。
@@ -2933,8 +3017,28 @@ console.log(result);
 
 0 <= rowIndex <= 33
 
-```
+```js
+/**
+ * @param {number} rowIndex
+ * @return {number[]}
+ */
+var getRow = function(rowIndex) {
+    let result=[1];
+    for(n=2;n<=rowIndex+1;n++){
+        let arr=new Array(n);
+        arr[0]=1;
+        arr[n-1]=1;
+        for(i=1;i<n-1;i++){
+            arr[i]=result[i-1]+result[i];
+        }
+        result=arr;
+    }
+    return result;
+};
 
+let test=3;
+let result=getRow(test);
+console.log(result);
 ```
 
 
