--- a/学习记录.md
+++ b/学习记录.md
@@ -36,6 +36,13 @@ js学习: js事件
 
 2022.01.07
 
-力扣：括号的最大嵌套深度(计数，栈)
+力扣：括号的最大嵌套深度(计数，栈), 路径总和，杨辉三角
 
 牛客：
+
+2022.01.08
+
+力扣：格雷编码（对称，位运算）,买卖股票的最佳时机 (一次遍历记录最低点) ,环形链表快慢指针
+
+牛客：
+
