--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -3041,6 +3041,190 @@ let result=getRow(test);
 console.log(result);
 ```
 
+## 121.买卖股票的最佳时机 
+
+给定一个数组 prices ，它的第 i 个元素 prices[i] 表示一支给定股票第 i 天的价格。
+
+你只能选择 某一天 买入这只股票，并选择在 未来的某一个不同的日子 卖出该股票。设计一个算法来计算你所能获取的最大利润。
+
+返回你可以从这笔交易中获取的最大利润。如果你不能获取任何利润，返回 0 。
+
+方法一：暴力法, 会超时
+
+```js
+/**
+ * @param {number[]} prices
+ * @return {number}
+ */
+var maxProfit = function(prices) {
+    let max=0;
+    for (let i=1;i<prices.length;i++){
+        for (let j=0;j<i;j++){
+            let profit=prices[i]-prices[j]
+            max=profit>max ? profit : max;
+        }
+    }
+    return max;
+};
+let test=[7,1,5,3,6,4];
+let result=maxProfit(test);
+console.log(result);
+```
+
+方法二：一次遍历
+
+我们只需要遍历价格数组一遍，记录历史最低点，然后在每一天考虑这么一个问题：如果我是在历史最低点买进的，那么我今天卖出能赚多少钱？当考虑完所有天数之时，我们就得到了最好的答案。
+
+```js
+var maxProfit = function(prices) {
+    let max=0;
+    let minPrice=Number.MAX_VALUE;
+    for (let i=0;i<prices.length;i++){
+        if (prices[i]<minPrice) {
+            minPrice=prices[i];
+        }else{
+            let profit=prices[i]-minPrice;
+            max=profit>max ? profit : max;
+        }
+    }
+    return max;
+};
+```
+
+## 125.  验证回文串
+
+给定一个字符串，验证它是否是回文串，只考虑字母和数字字符，可以忽略字母的大小写。
+
+**说明：**本题中，我们将空字符串定义为有效的回文串。
+
+```js
+/**
+ * @param {string} s
+ * @return {boolean}
+ */
+var isPalindrome = function(s) {
+    s=s.toLowerCase();
+    s=s.replace(/[^a-z0-9]/g,"")
+    console.log(s);
+    for (let i=0;i<s.length/2;i++){
+        if (s[i]!==s[s.length-1-i]) {
+            return false;
+        }
+    }
+    return true;
+};
+
+
+let str1 = "A man, a plan, a canal: Panama";
+let result=isPalindrome(str1);
+console.log(result);
+
+```
+
+## 136. 只出现一次的数字
+
+给定一个**非空**整数数组，除了某个元素只出现一次以外，其余每个元素均出现两次。找出那个只出现了一次的元素。
+
+**说明：**
+
+你的算法应该具有线性时间复杂度。 你可以不使用额外空间来实现吗？
+
+![只出现一次的数字位运算](E:\pogject\学习笔记\image\leetcode\只出现一次的数字位运算.png)
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var singleNumber = function(nums) {
+    let single=0;
+    for (let i=0;i<nums.length;i++){
+        single^=nums[i];
+    }
+    return single;
+};
+
+let test=[4,1,2,1,2];
+let result=singleNumber(test);
+console.log(result);
+```
+
+## 141.环形链表
+
+给你一个链表的头节点 head ，判断链表中是否有环。
+
+如果链表中有某个节点，可以通过连续跟踪 next 指针再次到达，则链表中存在环。 为了表示给定链表中的环，评测系统内部使用整数 pos 来表示链表尾连接到链表中的位置（索引从 0 开始）。如果 pos 是 -1，则在该链表中没有环。注意：pos 不作为参数进行传递，仅仅是为了标识链表的实际情况。
+
+如果链表中存在环，则返回 true 。 否则，返回 false 。
+
+提示：
+
+链表中节点的数目范围是 [0, 104]
+-105 <= Node.val <= 105
+pos 为 -1 或者链表中的一个 有效索引 。
+
+进阶：你能用 O(1)（即，常量）内存解决此问题吗？
+
+方法一：哈希表
+思路及算法
+
+最容易想到的方法是遍历所有节点，每次遍历到一个节点时，判断该节点此前是否被访问过。
+
+具体地，我们可以使用哈希表来存储所有已经访问过的节点。每次我们到达一个节点，如果该节点已经存在于哈希表中，则说明该链表是环形链表，否则就将该节点加入哈希表中。重复这一过程，直到我们遍历完整个链表即可。
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
+
+/**
+ * @param {ListNode} head
+ * @return {boolean}
+ */
+var hasCycle = function(head) {
+    if (head===null) {
+        return false;
+    }
+    let set=new Set();
+    while(head.next!==null){
+        if (set.has(head)) {
+            return true;
+        }else{
+            set.add(head);
+            head=head.next;
+        }
+    }
+    return false;
+};
+```
+
+方法二：快慢指针
+
+![环形链表快慢指针](E:\pogject\学习笔记\image\leetcode\环形链表快慢指针.png)
+
+```js
+var hasCycle = function(head) {
+    if (head===null || head.next===null) {
+        return false;
+    }
+    let slow=head;
+    let fast=head.next;
+    while(slow!==fast){
+        if (fast===null || fast.next===null) {
+            return false;
+        }else{
+            slow=slow.next;  //慢指针
+            fast=fast.next.next;  //快指针
+        }
+    }
+    return true;
+};
+```
+
 
 
 ## 208. 实现 Trie (前缀树)
