--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -3225,6 +3225,122 @@ var hasCycle = function(head) {
 };
 ```
 
+## 144.二叉树的前序遍历
+
+给你二叉树的根节点 root ，返回它节点值的 前序 遍历。
+
+```js
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var preorderTraversal = function(root) {
+    if (root===null) {
+        return [];
+    }
+    let result=[root.val];
+    //递归
+    result=result.concat(preorderTraversal(root.left));
+    result=result.concat(preorderTraversal(root.right));
+    return result;
+};
+```
+
+```js
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var preorderTraversal = function(root) {
+    if (root===null) {
+        return [];
+    }
+    let arr=[root];  //栈
+    let result=[];
+    while(arr.length>0){
+        //迭代
+        let node=arr.pop();
+        result.push(node.val);  //出栈
+        if (node.right!==null) {
+            //右子树先入栈确保后访问右子树
+            arr.push(node.right);
+        }
+        if (node.left!==null) {
+            arr.push(node.left);
+        }
+
+    }
+    return result;
+};
+```
+
+方法三：Morris 遍历
+思路与算法
+
+有一种巧妙的方法可以在线性时间内，只占用常数空间来实现前序遍历。这种方法由 J. H. Morris 在 1979 年的论文「Traversing Binary Trees Simply and Cheaply」中首次提出，因此被称为 Morris 遍历。
+
+**Morris 遍历的核心思想是利用树的大量空闲指针，实现空间开销的极限缩减**。其前序遍历规则总结如下：
+
+1. 新建临时节点，令该节点为 root；
+2. 如果当前节点的左子节点为空，将当前节点加入答案，并遍历当前节点的右子节点；
+3. 如果当前节点的左子节点不为空，在当前节点的左子树中找到当前节点在中序遍历下的前驱节点：
+
+- 如果前驱节点的右子节点为空，将前驱节点的右子节点设置为当前节点。然后将当前节点加入答案，并将前驱节点的右子节点更新为当前节点。当前节点更新为当前节点的左子节点。
+- 如果前驱节点的右子节点为当前节点，将它的右子节点重新设为空。当前节点更新为当前节点的右子节点。
+
+重复步骤 2 和步骤 3，直到遍历结束。
+
+这样我们利用 Morris 遍历的方法，前序遍历该二叉树，即可实现线性时间与常数空间的遍历。
+
+```
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var preorderTraversal = function(root) {
+    if (root===null) {
+        return [];
+    }
+    let p=root;
+    let q;
+
+    let result=[];
+    while(p!==null){
+        let q=p.left;
+        if (q!==null) {
+            //如果当前节点的左子节点不为空，在当前节点的左子树中找到当前节点在中序遍历下的前驱节点
+            while(q.right!==null && q.right!==p){
+                q=q.right;
+            }
+            if (q.right===null) {
+                //如果前驱节点的右子节点为空，将前驱节点的右子节点设置为当前节点。
+                result.push(p.val);  //然后将当前节点加入答案
+                q.right=p;  //并将前驱节点的右子节点更新为当前节点
+                p=p.left;  //当前节点更新为当前节点的左子节点。
+                continue;
+            }else{
+                //q.right!==null && q.right===p
+                //如果前驱节点的右子节点为当前节点，将它的右子节点重新设为空。当前节点更新为当前节点的右子节点。
+                q.right=null;
+            }
+        }else{
+            //如果当前节点的左子节点为空，将当前节点加入答案，并遍历当前节点的右子节点；
+            result.push(p.val);
+        }
+        p=p.right;
+    }
+    return result;
+};
+```
+
 
 
 ## 208. 实现 Trie (前缀树)
@@ -4337,6 +4453,56 @@ var maxDepth = function(s) {
     }
     return maxDeep;
 };
+```
+
+## 1629.按键持续时间最长的键
+
+LeetCode 设计了一款新式键盘，正在测试其可用性。测试人员将会点击一系列键（总计 n 个），每次一个。
+
+给你一个长度为 n 的字符串 keysPressed ，其中 keysPressed[i] 表示测试序列中第 i 个被按下的键。releaseTimes 是一个升序排列的列表，其中 releaseTimes[i] 表示松开第 i 个键的时间。字符串和数组的 下标都从 0 开始 。第 0 个键在时间为 0 时被按下，接下来每个键都 恰好 在前一个键松开时被按下。
+
+测试人员想要找出按键 持续时间最长 的键。第 i 次按键的持续时间为 releaseTimes[i] - releaseTimes[i - 1] ，第 0 次按键的持续时间为 releaseTimes[0] 。
+
+注意，测试期间，同一个键可以在不同时刻被多次按下，而每次的持续时间都可能不同。
+
+请返回按键 持续时间最长 的键，如果有多个这样的键，则返回 按字母顺序排列最大 的那个键。
+
+提示：
+
+releaseTimes.length == n
+keysPressed.length == n
+2 <= n <= 1000
+1 <= releaseTimes[i] <= 109
+releaseTimes[i] < releaseTimes[i+1]
+keysPressed 仅由小写英文字母组成
+
+```js
+/**
+ * @param {number[]} releaseTimes
+ * @param {string} keysPressed
+ * @return {character}
+ */
+var slowestKey = function(releaseTimes, keysPressed) {
+    let maxTime=releaseTimes[0];
+    let char=keysPressed[0];
+    for (let i=1;i<releaseTimes.length;i++){
+        let duration=releaseTimes[i]-releaseTimes[i-1]
+        if (duration>maxTime) {
+            maxTime=duration;
+            char=keysPressed[i];
+        }
+        if (duration===maxTime) {
+            if (keysPressed[i].codePointAt(0)>char.codePointAt(0)) {
+                char=keysPressed[i];
+            }
+        }
+    }
+    return char;
+};
+
+let test= [9,29,49,50];
+let result=slowestKey(test,"cbcd");
+console.log(result);
 ```
 
 
