--- a/学习记录.md
+++ b/学习记录.md
@@ -44,5 +44,14 @@ js学习: js事件
 
 力扣：格雷编码（对称，位运算）,买卖股票的最佳时机 (一次遍历记录最低点) ,环形链表快慢指针
 
+牛客：无
+
+js：提示框 css
+
+2022.01.09
+
+力扣：按键持续时间最长的键
+
 牛客：
 
+js : 文件上传按钮代理，opacity:0；
