--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -3440,6 +3440,61 @@ result=test.search("app");
 console.log(result);  //
 ```
 
+## 306.累加数
+
+累加数 是一个字符串，组成它的数字可以形成累加序列。
+
+一个有效的 累加序列 必须 至少 包含 3 个数。除了最开始的两个数以外，字符串中的其他数都等于它之前两个数相加的和。
+
+给你一个只包含数字 '0'-'9' 的字符串，编写一个算法来判断给定输入是否是 累加数 。如果是，返回 true ；否则，返回 false 。
+
+说明：累加序列里的数 不会 以 0 开头，所以不会出现 1, 2, 03 或者 1, 02, 3 的情况。
+
+提示：
+
+1 <= num.length <= 35
+num 仅由数字（0 - 9）组成
+
+进阶：你计划如何处理由过大的整数输入导致的溢出?
+
+```
+/**
+ * @param {string} num
+ * @return {boolean}
+ */
+var isAdditiveNumber = function(num) {
+    if (num.length<3) {
+        //累加数至少3位才行
+        return false;
+    }
+    let len=num.length;
+    let i=0,j=1,k=2;
+    let a,b;
+    let sumab;
+    while(i<len){
+        a=Number(num.slice(0,i));
+        while(j<len-Math.max(j-i,i)){
+            b=Number(num.slice(i,j));
+            while(k<len-Math.max(j-i,i)){
+                c=(a+b).toString();
+                if (num.indexOf(c)!==k) {
+
+                }
+            }
+            
+            
+        }
+    }
+    return false;
+};
+
+let test= "199100199";
+let result=isAdditiveNumber(test);
+console.log(result);
+```
+
+
+
 ## 390. 消除游戏
 
 列表 arr 由在范围 [1, n] 中的所有整数组成，并按严格递增排序。请你对 arr 应用下述算法：
