--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -3493,6 +3493,105 @@ let result=isAdditiveNumber(test);
 console.log(result);
 ```
 
+## 334.递增的三元子序列
+
+给你一个整数数组 nums ，判断这个数组中是否存在长度为 3 的递增子序列。
+
+如果存在这样的三元组下标 (i, j, k) 且满足 i < j < k ，使得 nums[i] < nums[j] < nums[k] ，返回 true ；否则，返回 false 。
+
+提示：
+
+1 <= nums.length <= 5 * 105
+-231 <= nums[i] <= 231 - 1
+
+**进阶：**你能实现时间复杂度为 `O(n)` ，空间复杂度为 `O(1)` 的解决方案吗？
+
+暴力解法，超时
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {boolean}
+ */
+var increasingTriplet = function(nums) {
+    if (nums.length<3) {
+        return false;
+    }
+    let flag=0;
+    let i;
+    for (let i=0;i<nums.length-2;){
+        for (let j=i+1;j<nums.length-1;j++){
+            if (nums[i]<nums[j]) {
+                for (let k=j+1;k<nums.length;k++){
+                    if (nums[j]<nums[k]) {
+                        return true;
+                    }
+                }
+            }
+            
+        }
+    }
+    return false;
+};
+
+let test=[2,1,5,0,4,6];
+let result=increasingTriplet(test);
+console.log(result);
+```
+
+找到局部最小最大值
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {boolean}
+ */
+var increasingTriplet = function(nums) {
+    if (nums.length<3) {
+        return false;
+    }
+    let min=nums[0]<nums[1] ? nums[0] : nums[1];  //局部最小在第一个与第二个开始计算
+    let max=nums[1];  //局部最大值从第二个值开始计算
+    for (let i=2;i<nums.length;i++){
+        if (min<max) {
+            //如果已经找到max>min
+            if (nums[i]>max) {
+                //如果当前值大于max,则满足题意条件
+                return true;
+            }else{
+                //如果不满足
+                if (nums[i]<=min) {
+                    //如果当前值比min小，就把min设为当前值
+                    min=nums[i];
+                }else{
+                    //如果当前值比min大，把max设为当前值，
+                    max=nums[i];
+                }
+            }
+        }else{
+            //当min>max时，从第二个开始值都不大于前面的时候
+            if (nums[i]<=min) {
+                //如果当前值比min小，就把min,max都设为当前值
+                max=nums[i];
+                min=nums[i];
+            }else{
+                //如果当前值比min大，把max设为当前值，后面就会满足max>min了
+                max=nums[i];
+            }
+        }
+    }
+    return false;
+};
+
+let test=[1,0,0,0,0,-1,0,0,0,1000];  //[1,1,-2,6]
+let result=increasingTriplet(test);
+console.log(result);
+```
+
+![递增的三元子序列（双向遍历）](E:\pogject\学习笔记\image\leetcode\递增的三元子序列（双向遍历）.png)
+
+![递增的三元子序列（贪心）](E:\pogject\学习笔记\image\leetcode\递增的三元子序列（贪心）.png)
+
 
 
 ## 390. 消除游戏
