--- a/学习记录.md
+++ b/学习记录.md
@@ -55,3 +55,16 @@ js：提示框 css
 牛客：
 
 js : 文件上传按钮代理，opacity:0；
+
+2022.01.10
+
+axios , js文件读取
+
+2022.01.11
+
+客户端验证提交文件格式
+
+2022.01.12
+
+力扣： 递增的三元子序列（双向遍历）  递增的三元子序列（贪心）
+
