--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -3341,6 +3341,159 @@ var preorderTraversal = function(root) {
 };
 ```
 
+## 145.二叉树的后序遍历
+
+给你一棵二叉树的根节点 root ，返回其节点值的 后序遍历 。
+
+```js
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var postorderTraversal = function(root) {
+    if (root===null) {
+        return [];
+    }
+    let result=[];
+    //递归
+    result=result.concat(postorderTraversal(root.left));
+    result=result.concat(postorderTraversal(root.right));
+    result.push(root.val);
+    return result;
+};
+```
+
+```js
+/**
+ * @param {TreeNode} root
+ * @return {number[]}
+ */
+var postorderTraversal = function(root) {
+    if (root===null) {
+        return [];
+    }
+    let arr=[root];  //栈
+    let result=[];
+    while(arr.length>0){
+        //反向迭代
+        let node=arr.pop();  //出栈
+        result.unshift(node.val);  //从数组前面进入队列
+        if (node.left!==null) {
+            //左子树先入栈确保先访问右子树
+            arr.push(node.left);
+        }
+        if (node.right!==null) {
+            //后入栈，先访问
+            arr.push(node.right);
+        }
+        
+    }
+    return result;
+};
+```
+
+## 155.最小栈
+
+设计一个支持 push ，pop ，top 操作，并能在常数时间内检索到最小元素的栈。
+
+- push(x) —— 将元素 x 推入栈中。
+
+- pop() —— 删除栈顶的元素。
+- top() —— 获取栈顶元素。
+- getMin() —— 检索栈中的最小元素。
+
+提示：
+
+pop、top 和 getMin 操作总是在 非空栈 上调用。
+
+```js
+var MinStack = function() {
+    this.data=new Array();
+    this.minValue=new Array();  //存储每一个栈顶对应的最小值
+};
+
+/** 
+ * @param {number} val
+ * @return {void}
+ */
+MinStack.prototype.push = function(val) {
+    if (this.data.length===0) {
+        this.minValue.push(val)
+    }else{
+        this.minValue.push(Math.min(this.minValue[this.minValue.length-1],val));
+    }
+    //顺序不能反
+    this.data.push(val);
+};
+
+/**
+ * @return {void}
+ */
+MinStack.prototype.pop = function() {
+    this.data.pop();
+    this.minValue.pop();
+};
+
+/**
+ * @return {number}
+ */
+MinStack.prototype.top = function() {
+    return this.data[this.data.length-1];
+};
+
+/**
+ * @return {number}
+ */
+MinStack.prototype.getMin = function() {
+    return this.minValue[this.minValue.length-1];
+};
+
+/**
+ * Your MinStack object will be instantiated and called as such:
+ * var obj = new MinStack()
+ * obj.push(val)
+ * obj.pop()
+ * var param_3 = obj.top()
+ * var param_4 = obj.getMin()
+ */
+```
+
+## 160.相交链表
+
+给你两个单链表的头节点 headA 和 headB ，**请你找出并返回两个单链表相交的起始节点。如果两个链表不存在相交节点，返回 null 。**
+题目数据 保证 整个链式结构中不存在环。
+
+注意，函数返回结果后，链表必须 保持其原始结构 。
+自定义评测：
+
+评测系统 的输入如下（你设计的程序 不适用 此输入）：
+
+- intersectVal - 相交的起始节点的值。如果不存在相交节点，这一值为 0
+- listA - 第一个链表
+- listB - 第二个链表
+- skipA - 在 listA 中（从头节点开始）跳到交叉节点的节点数
+- skipB - 在 listB 中（从头节点开始）跳到交叉节点的节点数
+
+评测系统将根据这些输入创建链式数据结构，并将两个头节点 headA 和 headB 传递给你的程序。如果程序能够正确返回相交节点，那么你的解决方案将被 视作正确答案 。
+
+提示：
+
+- listA 中节点数目为 m
+
+- listB 中节点数目为 n
+- 1 <= m, n <= 3 * 104
+- 1 <= Node.val <= 105
+- 0 <= skipA <= m
+- 0 <= skipB <= n
+- 如果 listA 和 listB 没有交点，intersectVal 为 0
+- 如果 listA 和 listB 有交点，intersectVal == listA[skipA] == listB[skipB]
+
+进阶：你能否设计一个时间复杂度 O(m + n) 、仅用 O(1) 内存的解决方案？
+
+```
+
+```
+
 
 
 ## 208. 实现 Trie (前缀树)
