--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -3490,8 +3490,57 @@ MinStack.prototype.getMin = function() {
 
 进阶：你能否设计一个时间复杂度 O(m + n) 、仅用 O(1) 内存的解决方案？
 
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val) {
+ *     this.val = val;
+ *     this.next = null;
+ * }
+ */
+
+/**
+ * @param {ListNode} headA
+ * @param {ListNode} headB
+ * @return {ListNode}
+ */
+var getIntersectionNode = function(headA, headB) {
+    //方法一：哈希集合
+    //首先遍历链表 headA，并将链表 headA 中的每个节点加入哈希集合中。然后遍历链表 headB，对于遍历到的每个节点，判断该节点是否在哈希集合中*/
+    const visited=new Set();
+    let p=headA;
+    while(p!==null){
+        visited.add(p);
+        p=p.next;
+    }
+    p=headB;
+    while(p!==null){
+        if (visited.has(p)) {
+            return p;
+        }
+        p=p.next;
+    }
+    return null;
+};
 ```
 
+![相交链表(双指针)](E:\pogject\学习笔记\image\leetcode\相交链表(双指针).png)
+
+```js
+var getIntersectionNode = function(headA, headB) {
+    
+    if (headA===null || headB===null) {
+        return null;
+    }
+    let p=headA;
+    let q=headB;
+
+    while(p!==q){
+        p=p===null ? headB : p.next;
+        q=q===null ? headA : q.next;
+    }
+    return p;
+};
 ```
 
 
@@ -4179,6 +4228,57 @@ let str2="cabcabca";
 let result=repeatedStringMatch(str1,str2);
 console.log(result);
 ```
+
+## 747.至少是其他数字两倍的最大数
+
+给你一个整数数组 nums ，其中总是存在 唯一的 一个最大整数 。
+
+请你找出数组中的最大元素并检查它是否 至少是数组中每个其他数字的两倍 。如果是，则返回 最大元素的下标 ，否则返回 -1 。
+
+提示：
+
+1 <= nums.length <= 50
+0 <= nums[i] <= 100
+nums 中的最大元素是唯一的
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var dominantIndex = function(nums) {
+    if (nums.length===1) {
+        return 0;
+    }
+    //找到最大值与次大比较即可
+    let maxValue=nums[0]>nums[1] ? nums[0] : nums[1];
+    let secondMaxValue=nums[0]>nums[1] ? nums[1] : nums[0];
+    let MaxValueIndex=nums[0]>nums[1] ? 0 : 1;
+    for (let i=2;i<nums.length;i++){
+        if (nums[i]>maxValue) {
+            secondMaxValue=maxValue;
+            maxValue=nums[i];
+            MaxValueIndex=i;
+        }else{
+            if (nums[i]>secondMaxValue) {
+                secondMaxValue=nums[i];
+            }
+        }
+    }
+    if (maxValue>=2*secondMaxValue) {
+        return MaxValueIndex;
+    }else{
+        return -1;
+    }
+};
+
+let str1 = [3,6,1,0];
+let result=dominantIndex(str1);
+console.log(result);
+
+```
+
+
 
 ## 825. 适龄的朋友
 
