--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -3794,6 +3794,88 @@ console.log(result);
 
 ![递增的三元子序列（贪心）](E:\pogject\学习笔记\image\leetcode\递增的三元子序列（贪心）.png)
 
+## 373.查找和最小的K对数字
+
+给定两个以升序排列的整数数组 nums1 和 nums2 , 以及一个整数 k 。
+
+定义一对值 (u,v)，其中第一个元素来自 nums1，第二个元素来自 nums2 。
+
+请找到和最小的 k 个数对 (u1,v1),  (u2,v2)  ...  (uk,vk) 。
+
+提示:
+
+- 1 <= nums1.length, nums2.length <= 104
+- -109 <= nums1[i], nums2[i] <= 109
+- nums1, nums2 均为升序排列
+- 1 <= k <= 1000
+
+```
+var kSmallestPairs = function(nums1, nums2, k) {
+    m = nums1.length
+    n = nums2.length
+    /*二分查找第 k 小的数对和的大小*/
+    let left = nums1[0] + nums2[0];
+    let right = nums1[m - 1] + nums2[n - 1];
+    let pairSum = right;
+    while (left <= right) {
+        const mid = left + ((right - left) >> 1);
+        let cnt = 0;
+        let start = 0;
+        let end = n - 1;
+        while (start < m && end >= 0) {
+            if (nums1[start] + nums2[end] > mid) {
+                end--;
+            } else {
+                cnt += end + 1;
+                start++;
+            }
+        }
+        if (cnt < k) {
+            left = mid + 1;
+        } else {
+            pairSum = mid;
+            right = mid - 1;
+        }
+    }
+
+    const ans = [];
+    let pos = n - 1;
+    /*找到小于目标值 pairSum 的数对*/
+    for (let i = 0; i < m; i++) {
+        while (pos >= 0 && nums1[i] + nums2[pos] >= pairSum) {
+            pos--;
+        }
+        for (let j = 0; j <= pos && k > 0; j++, k--) {
+            const list = [];
+            list.push(nums1[i]);
+            list.push(nums2[j]);
+            ans.push(list);
+        }
+    }
+
+    /*找到等于目标值 pairSum 的数对*/
+    pos = n - 1;
+    for (let i = 0; i < m && k > 0; i++) {
+        while (pos >= 0 && nums1[i] + nums2[pos] > pairSum) {
+            pos--;
+        }
+        for (let j = i; k > 0 && j >= 0 && nums1[j] + nums2[pos] == pairSum; j--, k--) {
+            const list = [];
+            list.push(nums1[i]);
+            list.push(nums2[pos]);
+            ans.push(list);
+        }
+    }
+    return ans;
+}
+
+let str1=[0,1,3,6];
+let str2=[2,3,4,5];
+let result=kSmallestPairs(str1,str2,3);
+console.log(result);
+
+```
+
 
 
 ## 390. 消除游戏
