--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -3543,6 +3543,58 @@ var getIntersectionNode = function(headA, headB) {
 };
 ```
 
+## 168. Excel表列名称
+
+给你一个整数 columnNumber ，返回它在 Excel 表中相对应的列名称。
+
+```js
+/**
+ * @param {number} columnNumber
+ * @return {string}
+ */
+var convertToTitle = function(columnNumber) {
+
+    let result=[];
+    while(columnNumber>0){
+        if (columnNumber===26) {
+            //剩余为26的特殊处理
+            result.unshift("Z");
+            break;
+        }
+        let r=columnNumber%26;
+        if (r>0) {
+            let alpha=String.fromCharCode(0x60+r).toUpperCase();
+            result.unshift(alpha);
+            columnNumber=columnNumber-r;
+        }else{
+            result.unshift("Z");
+            columnNumber=columnNumber-26;
+        }
+        //console.log(columnNumber,r);
+        columnNumber=columnNumber/26;
+    }
+    
+    return result.join("");
+};
+
+let test=52;
+let result=convertToTitle(test);
+console.log(result);
+```
+
+```
+var convertToTitle = function(columnNumber) {
+    let ans = [];
+    while (columnNumber > 0) {
+        const a0 = (columnNumber - 1) % 26 + 1;
+        ans.push(String.fromCharCode(a0 - 1 + 'A'.charCodeAt()));
+        columnNumber = Math.floor((columnNumber - a0) / 26);
+    }
+    ans.reverse();
+    return ans.join('');
+};
+```
+
 
 
 ## 208. 实现 Trie (前缀树)
@@ -4780,6 +4832,72 @@ var dayOfTheWeek = function(day, month, year) {
 let result=dayOfTheWeek(31,8,2019);
 console.log(result);
 ```
+
+## 1219. 黄金矿工
+
+你要开发一座金矿，地质勘测学家已经探明了这座金矿中的资源分布，并用大小为 m * n 的网格 grid 进行了标注。每个单元格中的整数就表示这一单元格中的黄金数量；如果该单元格是空的，那么就是 0。
+
+为了使收益最大化，矿工需要按以下规则来开采黄金：
+
+每当矿工进入一个单元，就会收集该单元格中的所有黄金。
+矿工每次可以从当前位置向上下左右四个方向走。
+每个单元格只能被开采（进入）一次。
+不得开采（进入）黄金数目为 0 的单元格。
+矿工可以从网格中 任意一个 有黄金的单元格出发或者是停止。
+
+提示：
+
+1 <= grid.length, grid[i].length <= 15
+0 <= grid[i][j] <= 100
+最多 25 个单元格中有黄金。
+
+![黄金矿工回溯算法](E:\pogject\学习笔记\image\leetcode\黄金矿工回溯算法.png)
+
+```js
+/**
+ * @param {number[][]} grid
+ * @return {number}
+ */
+var getMaximumGold = function(grid) {
+    this.grid=grid;
+    this.m=this.grid.length;
+    this.n=this.grid[0].length;
+    this.dirs=[[-1,0],[1,0],[0,-1],[0,1]];
+    this.ans=0;
+
+    const dfs=(x,y,gold,dirs)=>{
+        gold+=grid[x][y];
+        this.ans=Math.max(ans,gold);
+
+        const rec=grid[x][y];
+        grid[x][y]=0;
+
+        for (let d=0;d<4;d++){
+            const nx=x+this.dirs[d][0];
+            const ny=y+this.dirs[d][1];
+            if (nx>=0 && nx<m && ny>=0 && ny<n && grid[nx][ny]>0) {
+                dfs(nx,ny,gold);
+            }
+        }
+        grid[x][y]=rec;
+    }
+
+    for (let i=0;i<m;i++){
+        for(let j=0;j<n;j++){
+            if (grid[i][j]!==0) {
+                dfs(i,j,0);
+            }
+        }
+    }
+    return ans;
+};
+
+let test=[[1,0,7],[2,0,6],[3,4,5],[0,3,0],[9,0,20]];
+let result=getMaximumGold(test);
+console.log(result);
+```
+
+
 
 ## 1576.替换所有的问号
 
