--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -3595,6 +3595,48 @@ var convertToTitle = function(columnNumber) {
 };
 ```
 
+## 169. 多数元素
+
+给定一个大小为 n 的数组，找到其中的多数元素。多数元素是指在数组中出现次数 大于 ⌊ n/2 ⌋ 的元素。
+
+你可以假设数组是非空的，并且给定的数组总是存在多数元素。
+
+进阶：
+
+尝试设计时间复杂度为 O(n)、空间复杂度为 O(1) 的算法解决此问题。
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var majorityElement = function(nums) {
+    let n=nums.length>>1;
+    //console.log(n);
+    let obj={};
+    for (let i=0;i<nums.length;i++){
+        obj[nums[i]]===undefined ? obj[nums[i]]=1 : ++obj[nums[i]];
+    }
+    //console.log(obj);
+    let result;
+    Object.keys(obj).forEach((key)=>{
+        if (obj[key]>n) {
+            result=key;
+        }
+    });
+    return result;
+
+};
+
+let test=[2,2,1,1,1,2,2];
+let result=majorityElement(test);
+console.log(result);
+```
+
+```
+
+```
+
 
 
 ## 208. 实现 Trie (前缀树)
@@ -5164,6 +5206,76 @@ let result=eatenApples(str1,str2);
 console.log(result);
 
 ```
+
+## 1748. 唯一元素的和
+
+给你一个整数数组 nums 。数组中唯一元素是那些只出现 恰好一次 的元素。
+
+请你返回 nums 中唯一元素的 和 。
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var sumOfUnique = function(nums) {
+    let obj={};
+    let sum=0;
+    for(let i=0;i<nums.length;i++){
+        obj[nums[i]]===undefined ? obj[nums[i]]=1 : ++obj[nums[i]];
+        if (obj[nums[i]]===1) {
+            //计数为1时，加该值
+            sum+=nums[i];
+        }
+        if (obj[nums[i]]===2) {
+            //计数为2时,减掉
+            sum-=nums[i];
+        }
+    }
+    return sum;
+};
+
+
+let test=[2,2,1,1,1,2,2];
+let result=sumOfUnique(test);
+console.log(result);
+```
+
+```js
+var sumOfUnique = function(nums) {
+    const cnt = new Map();
+    for (const num of nums) {
+        cnt.set(num, (cnt.get(num) || 0) + 1);
+    }
+    let ans = 0;
+    for (const [num, c] of cnt.entries()) {
+        if (c === 1) {
+            ans += num;
+        }
+    }
+    return ans;
+};
+```
+
+```js
+var sumOfUnique = function(nums) {
+    let ans = 0;
+    const state = new Map();
+    for (const num of nums) {
+        if (!state.has(num)) {
+            ans += num;
+            state.set(num, 1);
+        } else if (state.get(num) === 1) {
+            ans -= num;
+            state.set(num, 2);
+        }
+    }
+    return ans;
+};
+
+```
+
+
 
 ## 1995. 统计特殊四元组
 
