--- a/学习记录.md
+++ b/学习记录.md
@@ -78,4 +78,8 @@ axios , js文件读取
 
 2022.02.05
 
-力扣：黄金矿工（回溯算法）,Excel表列名称,
+力扣：黄金矿工（回溯算法）,Excel表列名称 ， 多数元素（计数处理）（后面要看题解）。
+
+2022.02.06
+
+力扣：唯一元素的和(状态标记)，
