--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -3637,6 +3637,167 @@ console.log(result);
 
 ```
 
+## 171. Excel 表列序号
+
+给你一个字符串 columnTitle ，表示 Excel 表格中的列名称。返回 该列名称对应的列序号 。
+
+```js
+/**
+ * @param {string} columnTitle
+ * @return {number}
+ */
+var titleToNumber = function(columnTitle) {
+    let result=0;
+    let n=columnTitle.length
+    for (let i=0; i<n; i++){
+        let num=columnTitle.charCodeAt(n-1-i)-64;
+        result+=num*Math.pow(26,i);
+    }
+    return result;
+};
+
+
+let test="FXSHRXW";
+let result=titleToNumber(test);
+console.log(result);
+```
+
+## 175. 组合两个表
+
+编写一个 SQL 查询，满足条件：无论 person 是否有地址信息，都需要基于上述两表提供 person 的以下信息：
+
+```
+FirstName, LastName, City, State
+```
+
+```mysql
+select FirstName,LastName,City,State 
+from Person left join Address 
+on Person.PersonId=Address.PersonId;
+```
+
+## 181. 超过经理收入的员工
+
+Employee 表包含所有员工，他们的经理也属于员工。每个员工都有一个 Id，此外还有一列对应员工的经理的 Id。
+给定 Employee 表，编写一个 SQL 查询，该查询可以获取收入超过他们经理的员工的姓名。在上面的表格中，Joe 是唯一一个收入超过他的经理的员工。
+
+```mysql
+select a.Name as 'Employee' 
+from Employee as a,Employee as b 
+where a.ManagerId=b.Id and a.Salary>b.Salary;
+```
+
+```mysql
+select a.Name as 'Employee' 
+from Employee as a join Employee as b 
+on a.ManagerId=b.Id and a.Salary>b.Salary;
+```
+
+## 182. 查找重复的电子邮箱
+
+编写一个 SQL 查询，查找 Person 表中所有重复的电子邮箱。
+
+```mysql
+select Email from (
+	select Email,count(Email) as num 
+	from Person group by Email 
+) as statistic where num>1;
+
+```
+
+```mysql
+select Email from Person group by Email having count(Email) >1;
+```
+
+## 183. 从不订购的客户
+
+某网站包含两个表，Customers 表和 Orders 表。编写一个 SQL 查询，找出所有从不订购任何东西的客户。
+
+```mysql
+select customers.name as 'Customers' from customers 
+where customers.id not in (
+	select customerid from orders
+);
+```
+
+## 190. 颠倒二进制位
+
+颠倒给定的 32 位无符号整数的二进制位。
+
+提示：
+
+输入是一个长度为 32 的二进制字符串
+
+进阶: 如果多次调用这个函数，你将如何优化你的算法？
+
+```js
+/**
+ * @param {number} n - a positive integer
+ * @return {number} - a positive integer
+ */
+var reverseBits = function(n) {
+    let rev=0;
+    for (let i=0;i<32 && n>0;++i){
+        rev |=(n & 1) << (31-i);  //按位或操作符用管道符
+        n >>>=1;  //无符号右移用 3 个大于号表示
+    }
+    return rev >>> 0;
+};
+
+```
+
+```js
+var reverseBits = function(n) {
+    const M1 = 0x55555555; // 01010101010101010101010101010101
+    const M2 = 0x33333333; // 00110011001100110011001100110011
+    const M4 = 0x0f0f0f0f; // 00001111000011110000111100001111
+    const M8 = 0x00ff00ff; // 00000000111111110000000011111111
+
+    n = n >>> 1 & M1 | (n & M1) << 1;
+    n = n >>> 2 & M2 | (n & M2) << 2;
+    n = n >>> 4 & M4 | (n & M4) << 4;
+    n = n >>> 8 & M8 | (n & M8) << 8;
+    return (n >>> 16 | n << 16) >>> 0;
+};
+```
+
+## 191. 位1的个数
+
+编写一个函数，输入是一个无符号整数（以二进制串的形式），返回其二进制表达式中数字位数为 '1' 的个数（也被称为汉明重量）。
+
+```js
+/**
+ * @param {number} n - a positive integer
+ * @return {number}
+ */
+var hammingWeight = function(n) {
+    let ret=0;
+    for (let i=0;i<32;i++){
+        if ((n & (1 << i))!==0) {
+            //当且仅当 n 的第 i 位为 1 时，运算结果不为 0。
+            ret++;
+        }
+    }
+    return ret;
+};
+```
+
+```js
+/**
+ * @param {number} n - a positive integer
+ * @return {number}
+ */
+var hammingWeight = function(n) {
+    let ret=0;
+    while(n){
+        //因为每次运算会使得 nn 的最低位的 11 被翻转，因此运算次数就等于 nn 的二进制位中 11 的个数。
+        n&=n-1;
+        ret++;
+    }
+    return ret;
+};
+```
+
 
 
 ## 208. 实现 Trie (前缀树)
