--- a/学习记录.md
+++ b/学习记录.md
@@ -82,4 +82,5 @@ axios , js文件读取
 
 2022.02.06
 
-力扣：唯一元素的和(状态标记)，
+力扣：唯一元素的和(状态标记)，Excel 表列序号 , 组合两个表(mysql) ，超过经理收入的员工(mysql) ，颠倒二进 制位(逻辑运算) ，位1的个数 ，
+
