--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -3798,6 +3798,22 @@ var hammingWeight = function(n) {
 };
 ```
 
+## 193. 有效电话号码
+
+给定一个包含电话号码列表（一行一个电话号码）的文本文件 file.txt，写一个单行 bash 脚本输出所有有效的电话号码。
+
+你可以假设一个有效的电话号码必须满足以下两种格式： (xxx) xxx-xxxx 或 xxx-xxx-xxxx。（x 表示一个数字）
+
+你也可以假设每行前后没有多余的空格字符。
+
+```bash
+grep -P '^([0-9]{3}-|\([0-9]{3}\) )[0-9]{3}-[0-9]{4}$' file.txt
+
+awk '/^([0-9]{3}-|\([0-9]{3}\) )[0-9]{3}-[0-9]{4}$/' file.txt
+
+gawk '/^([0-9]{3}-|\([0-9]{3}\) )[0-9]{3}-[0-9]{4}$/' file.txt
+```
+
 
 
 ## 208. 实现 Trie (前缀树)
@@ -5098,6 +5114,63 @@ var getMaximumGold = function(grid) {
 let test=[[1,0,7],[2,0,6],[3,4,5],[0,3,0],[9,0,20]];
 let result=getMaximumGold(test);
 console.log(result);
+```
+
+## 1405. 最长快乐字符串
+
+如果字符串中不含有任何 'aaa'，'bbb' 或 'ccc' 这样的字符串作为子串，那么该字符串就是一个「快乐字符串」。
+
+给你三个整数 a，b ，c，请你返回 任意一个 满足下列全部条件的字符串 s：
+
+s 是一个尽可能长的快乐字符串。
+s 中 最多 有a 个字母 'a'、b 个字母 'b'、c 个字母 'c' 。
+s 中只含有 'a'、'b' 、'c' 三种字母。
+如果不存在这样的字符串 s ，请返回一个空字符串 ""。
+
+来提示：
+
+0 <= a, b, c <= 100
+a + b + c > 0
+
+```js
+/**
+ * @param {number} a
+ * @param {number} b
+ * @param {number} c
+ * @return {string}
+ */
+var longestDiverseString = function(a, b, c) {
+    let result=[];
+    const arr=[[a,'a'],[b,'b'],[c,'c']];
+    while(true){
+        arr.sort((a,b)=>b[0]-a[0]);
+        let hasNext=false;
+        for(const [i,[c,ch]] of arr.entries()){
+            if (c<=0) {
+                break;
+            }
+            const m=result.length;
+            if (m>=2 && result[m-2]===ch && result[m-1]===ch) {
+                continue;
+            }
+            hasNext=true;
+            result.push(ch);
+            arr[i][0]--;
+            break;
+        }
+        if (!hasNext) {
+            break;
+        }
+    }
+    return result.join("");
+};
+
+
+
+let test=100;
+let result=longestDiverseString(1,1,7);
+console.log(result);
+
 ```
 
 
