--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -3814,6 +3814,229 @@ awk '/^([0-9]{3}-|\([0-9]{3}\) )[0-9]{3}-[0-9]{4}$/' file.txt
 gawk '/^([0-9]{3}-|\([0-9]{3}\) )[0-9]{3}-[0-9]{4}$/' file.txt
 ```
 
+## 195. 第十行
+
+给定一个文本文件 file.txt，请只打印这个文件中的第十行。
+说明:
+
+如果文件少于十行，你应当输出什么？
+
+至少有三种不同的解法，请尝试尽可能多的方法来解题。
+
+```bash
+awk 'NR=10' file.txt
+sed -n 10p file.txt
+tail -n +10 file.txt|head -1
+```
+
+## 196. 删除重复的电子邮箱
+
+编写一个 SQL 查询，来删除 Person 表中所有重复的电子邮箱，重复的邮箱里只保留 Id 最小 的那个。
+提示：
+
+执行 SQL 之后，输出是整个 Person 表。
+使用 delete 语句。
+
+```mysql
+delete p1 from Person p1,Person p2 
+where p1.Email=p2.Email and p1.Id>p2.Id;
+```
+
+## 197. 上升的温度
+
+编写一个 SQL 查询，来查找与之前（昨天的）日期相比温度更高的所有日期的 id 。
+
+返回结果 不要求顺序 。
+
+```mysql
+select weather.id as 'Id' 
+from weather join weather w on DATEDIFF(weather.recordDate,w.recordDate)=1
+ and weather.Temperature>w.Temperature;
+```
+
+## 202. 快乐数
+
+编写一个算法来判断一个数 n 是不是快乐数。
+
+「快乐数」 定义为：
+
+对于一个正整数，每一次将该数替换为它每个位置上的数字的平方和。
+然后重复这个过程直到这个数变为 1，也可能是 无限循环 但始终变不到 1。
+如果这个过程 结果为 1，那么这个数就是快乐数。
+如果 n 是 快乐数 就返回 true ；不是，则返回 false 。
+
+```js
+/**
+ * @param {number} n
+ * @return {boolean}
+ */
+var isHappy = function(n) {
+    let set=new Set();
+    while(true){
+        console.log(n);
+        let str=n.toString();
+        if (set.has(n)) {
+            //如果该数已经计算过，则不是快乐数
+            return false;
+        }else{
+            set.add(n);
+        }
+        n=0;
+        for(let i=0;i<str.length;i++){
+            n+=str[i]*str[i];
+        }
+        if (n===1) {
+            return true;
+        }
+    }
+};
+
+let test=19;
+let result=isHappy(test);
+console.log(result);
+```
+
+## 203. 移除链表元素
+
+给你一个链表的头节点 head 和一个整数 val ，请你删除链表中所有满足 Node.val == val 的节点，并返回 新的头节点 。
+
+方法一：递归
+
+```js
+var removeElements = function(head, val) {
+    if (head===null) {
+        return head;
+    }
+    head.next=removeElements(head.next,val);
+    //相等则返回后继
+    return head.val===val ? head.next : head;
+};
+```
+
+方法二：迭代
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @param {number} val
+ * @return {ListNode}
+ */
+var removeElements = function(head, val) {
+    const pre=new ListNode(0);
+    pre.next=head;
+    let temp=pre;
+    while(temp.next!==null){
+        if (temp.next.val===val) {
+            temp.next=temp.next.next;
+        }else{
+            temp=temp.next;
+        }
+    }
+    return pre.next;
+};
+```
+
+## 205. 同构字符串
+
+给定两个字符串 s 和 t ，判断它们是否是同构的。
+
+如果 s 中的字符可以按某种映射关系替换得到 t ，那么这两个字符串是同构的。
+
+每个出现的字符都应当映射到另一个字符，同时不改变字符的顺序。不同字符不能映射到同一个字符上，相同字符只能映射到同一个字符上，字符可以映射到自己本身。
+
+提示：
+
+1 <= s.length <= 5 * 104
+t.length == s.length
+s 和 t 由任意有效的 ASCII 字符组成
+
+```js
+/**
+ * @param {string} s
+ * @param {string} t
+ * @return {boolean}
+ */
+var isIsomorphic = function(s, t) {
+    let m1=new Map();
+    let m2=new Map();
+    for (let i=0;i<s.length;i++){
+        if (m1.has(s[i])) {
+            //当映射存在
+            if (m1.get(s[i])!==t[i]) {
+                return false;
+            }
+        }else{
+            m1.set(s[i],t[i]);
+        }
+        if (m2.has(t[i])) {
+            if (m2.get(t[i])!==s[i]) {
+                return false;
+            }
+        }else{
+            m2.set(t[i],s[i]);
+        }
+    }
+    return true;
+};
+
+let test="paper";
+let result=isIsomorphic(test,"title");
+console.log(result);
+```
+
+## 206. 反转链表
+
+给你单链表的头节点 head ，请你反转链表，并返回反转后的链表。
+进阶：链表可以选用迭代或递归方式完成反转。你能否用两种方法解决这道题？
+
+方法一：迭代
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @return {ListNode}
+ */
+var reverseList = function(head) {
+    let prev=null;
+    let curr=head;
+    while(curr){
+        const next=curr.next;  //当前结点的后继
+        curr.next=prev;  //将当前节点的 next 指针改为指向前一个节点
+        prev=curr;  //先存储其前一个节点
+        curr=next;  //存储后一个节点
+    }
+    return prev;
+};
+```
+
+方法二：递归
+
+```js
+var reverseList = function(head) {
+    if (head===null || head.next===null) {
+        return head;
+    }
+    const newHead=reverseList(head.next);
+    head.next.next=head;
+    head.next=null;
+    return newHead;
+};
+```
+
 
 
 ## 208. 实现 Trie (前缀树)
