--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -5085,6 +5085,158 @@ let result=catMouseGame(test);
 console.log(result);
 ```
 
+## 1001. 网格照明
+
+在大小为 n x n 的网格 grid 上，每个单元格都有一盏灯，最初灯都处于 关闭 状态。
+
+给你一个由灯的位置组成的二维数组 lamps ，其中 lamps[i] = [rowi, coli] 表示 打开 位于 grid[rowi][coli] 的灯。即便同一盏灯可能在 lamps 中多次列出，不会影响这盏灯处于 打开 状态。
+
+当一盏灯处于打开状态，它将会照亮 自身所在单元格 以及同一 行 、同一 列 和两条 对角线 上的 所有其他单元格 。
+
+另给你一个二维数组 queries ，其中 queries[j] = [rowj, colj] 。对于第 j 个查询，如果单元格 [rowj, colj] 是被照亮的，则查询结果为 1 ，否则为 0 。在第 j 次查询之后 [按照查询的顺序] ，关闭 位于单元格 grid[rowj][colj] 上及相邻 8 个方向上（与单元格 grid[rowi][coli] 共享角或边）的任何灯。
+
+返回一个整数数组 ans 作为答案， ans[j] 应等于第 j 次查询 queries[j] 的结果，1 表示照亮，0 表示未照亮。
+
+提示：
+
+1 <= n <= 109
+0 <= lamps.length <= 20000
+0 <= queries.length <= 20000
+lamps[i].length == 2
+0 <= rowi, coli < n
+queries[j].length == 2
+0 <= rowj, colj < n
+
+```
+/**
+ * @param {number} n
+ * @param {number[][]} lamps
+ * @param {number[][]} queries
+ * @return {number[]}
+ */
+var gridIllumination = function(n, lamps, queries) {
+    let grids=new Array(n);
+    for (let i=0;i<n;i++){
+        grids[i]=new Array(n).fill(0);
+    }
+    //N,NE,E,ES,S,SE,E,EN
+    const dirs=[[-1,0],[-1,1],[0,1],[1,1],[1,0],[1,-1],[0,-1],[-1,-1]]
+    lamps.forEach((lamp)=>{
+        if (grids[lamp[0]][lamp[1]]<4*(n-1)+1) {
+            //避免灯重复变亮
+            dirs.forEach((dir)=>{
+                let row=lamp[0];
+                let col=lamp[1];
+                while(row>=0 && row<n && col>=0 && col<n ){
+                    grids[row][col]+=1;
+                    row+=dir[0];
+                    col+=dir[1];
+                }
+            });
+            grids[lamp[0]][lamp[1]]+=4*(n-1)+1;
+        }
+    });
+    //console.log(grids);
+    const result=[];
+    queries.forEach((query)=>{
+        if (grids[query[0]][query[1]]>0) {
+            result.push(1);
+        }else{
+            result.push(0);
+        }
+        if (grids[query[0]][query[1]]>4*(n-1)) {
+            //查询的灯亮着
+            //关闭该灯并设置被照明的网格-1
+            shutTheLamp(grids,query[0],query[1],n);
+            //console.log(grids);
+        }
+        dirs.forEach((dir)=>{
+            let row=query[0]+dir[0];
+            let col=query[1]+dir[1];
+            if(row>=0 && row<n && col>=0 && col<n ){
+                if (grids[row][col]>4*(n-1)) {
+                    //查询灯其他方向上位置的灯亮着
+                    //关闭该灯并设置被照明的网格-1
+                    shutTheLamp(grids,row,col,n);
+                    //console.log(grids);
+                }
+            }
+        });
+    });
+    return result;
+};
+
+var shutTheLamp=function(grids,row0,col0,n){
+    const dirs=[[-1,0],[-1,1],[0,1],[1,1],[1,0],[1,-1],[0,-1],[-1,-1]];
+    dirs.forEach((dir)=>{
+        let row=row0;
+        let col=col0;
+        while(row>=0 && row<n && col>=0 && col<n ){
+            grids[row][col]-=1;
+            row+=dir[0];
+            col+=dir[1];
+        }
+    });
+    grids[row0][col0]-=(4*(n-1)+1);
+};
+
+let n = 1;
+//let lamps =[[2,5],[4,2],[0,3],[0,5],[1,4],[4,2],[3,3],[1,0]];
+//let queries = [[4,3],[3,1],[5,3],[0,5],[4,4],[3,3]];
+let lamps=[[0,0],[0,0]];
+let queries=[[0,0],[0,0]];
+let result=gridIllumination(n,lamps,queries);
+console.log(result);
+```
+
+哈希表
+
+![网格照明(哈希表)](E:\pogject\学习笔记\image\leetcode\网格照明(哈希表).png)
+
+```
+var gridIllumination = function(n, lamps, queries) {
+    const row = new Map();
+    const col = new Map();
+    const diagonal = new Map();
+    const antiDiagonal = new Map();
+    const points = new Set();
+    for (const lamp of lamps) {
+        if (points.has(hash(lamp[0], lamp[1]))) {
+            continue;
+        }
+        points.add(hash(lamp[0], lamp[1]));
+        row.set(lamp[0], (row.get(lamp[0]) || 0) + 1);
+        col.set(lamp[1], (col.get(lamp[1]) || 0) + 1);
+        diagonal.set(lamp[0] - lamp[1], (diagonal.get(lamp[0] - lamp[1]) || 0) + 1);
+        antiDiagonal.set(lamp[0] + lamp[1], (antiDiagonal.get(lamp[0] + lamp[1]) || 0) + 1);
+    }
+    const ret = new Array(queries.length).fill(0);
+    for (const [i, [r, c]] of queries.entries()) {
+        if (row.get(r) || col.get(c) || diagonal.get(r - c) || antiDiagonal.get(r + c)) {
+            ret[i] = 1;
+        }
+        for (let x = r - 1; x < r + 2; x++) {
+            for (let y = c - 1; y < c + 2; y++) {
+                if (x < 0 || y < 0 || x >= n || y >= n || !points.has(hash(x, y))) {
+                    continue;
+                }
+                points.delete(hash(x, y));
+                row.set(x, row.get(x) - 1);
+                col.set(y, col.get(y) - 1);
+                diagonal.set(x - y, diagonal.get(x - y) - 1);
+                antiDiagonal.set(x + y, antiDiagonal.get(x + y) - 1);
+            }
+        }
+    }
+    return ret;
+}
+
+const hash = (x, y) => {
+    return '' + x + y;
+};
+
+```
+
 
 
 ## 1044.最长重复子串
