--- a/学习记录.md
+++ b/学习记录.md
@@ -84,7 +84,11 @@ axios , js文件读取
 
 力扣：唯一元素的和(状态标记)，Excel 表列序号 , 组合两个表(mysql) ，超过经理收入的员工(mysql) ，颠倒二进 制位(逻辑运算) ，位1的个数 ，
 
-2022.02.07s
+2022.02.07
 
 力扣：有效电话号码(bash) ，最长快乐字符串，
+
+2022.02.08
+
+力扣：网格照明(哈希表)
 
