--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -4136,6 +4136,88 @@ result=test.search("app");
 console.log(result);  //
 ```
 
+## 217. 存在重复元素
+
+给定一个整数数组，判断是否存在重复元素。如果存在一值在数组中出现至少两次，函数返回 `true` 。如果数组中每个元素都不相同，则返回 `false` 。
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {boolean}
+ */
+var containsDuplicate = function(nums) {
+    let set=new Set();
+    for(let i=0;i<nums.length;i++){
+        if (set.has(nums[i])) {
+            return true;
+        }else{
+            set.add(nums[i]);
+        }
+    }
+    return false;
+};
+
+let test=[1,1,1,3,3,4,3,2,4,2];
+let result=containsDuplicate(test);
+console.log(result);
+```
+
+## 219. 存在重复元素 II
+
+给你一个整数数组 nums 和一个整数 k ，判断数组中是否存在两个 不同的索引 i 和 j ，满足 nums[i] == nums[j] 且 abs(i - j) <= k 。如果存在，返回 true ；否则，返回 false 。
+
+方法一：哈希表
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {boolean}
+ */
+var containsNearbyDuplicate = function(nums, k) {
+    let m=new Map();
+    for(let i=0;i<nums.length;i++){
+        if (m.has(nums[i])) {
+            if (Math.abs(m.get(nums[i])-i)<=k) {
+                return true;
+            }else{
+                m.set(nums[i],i);
+            }
+        }else{
+            m.set(nums[i],i);
+        }
+        //console.log(m);
+    }
+    return false;
+};
+
+let test=[1,0,1,1];
+let result=containsNearbyDuplicate(test,1);
+console.log(result);
+```
+
+方法二：滑动窗口
+
+```js
+var containsNearbyDuplicate = function(nums, k) {
+    const set = new Set();
+    const length = nums.length;
+    for (let i = 0; i < length; i++) {
+        if (i > k) {
+            set.delete(nums[i - k - 1]);
+        }
+        if (set.has(nums[i])) {
+            return true;
+        }
+        set.add(nums[i])
+    }
+    return false;
+};
+
+```
+
+
+
 ## 306.累加数
 
 累加数 是一个字符串，组成它的数字可以形成累加序列。
