--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -4216,6 +4216,126 @@ var containsNearbyDuplicate = function(nums, k) {
 
 ```
 
+## 225. 用队列实现栈
+
+请你仅使用两个队列实现一个后入先出（LIFO）的栈，并支持普通栈的全部四种操作（push、top、pop 和 empty）。
+
+实现 MyStack 类：
+
+void push(int x) 将元素 x 压入栈顶。
+int pop() 移除并返回栈顶元素。
+int top() 返回栈顶元素。
+boolean empty() 如果栈是空的，返回 true ；否则，返回 false 。
+
+
+注意：
+
+你只能使用队列的基本操作 —— 也就是 push to back、peek/pop from front、size 和 is empty 这些操作。
+你所使用的语言也许不支持队列。 你可以使用 list （列表）或者 deque（双端队列）来模拟一个队列 , 只要是标准的队列操作即可。
+
+提示：
+
+1 <= x <= 9
+最多调用100 次 push、pop、top 和 empty
+每次调用 pop 和 top 都保证栈不为空
+
+进阶：你能否仅用一个队列来实现栈。
+
+方法一：两个队列
+
+```js
+var MyStack = function() {
+    this.queue1=[];
+    this.queue2=[];
+};
+
+/** 
+ * @param {number} x
+ * @return {void}
+ */
+MyStack.prototype.push = function(x) {
+    this.queue2.push(x);
+    while(this.queue1.length>0){
+        this.queue2.push(this.queue1.shift());
+    }
+    let temp=this.queue1;
+    this.queue1=this.queue2;
+    this.queue2=temp;
+};
+
+/**
+ * @return {number}
+ */
+MyStack.prototype.pop = function() {
+    return this.queue1.shift();
+};
+
+/**
+ * @return {number}
+ */
+MyStack.prototype.top = function() {
+    return this.queue1[0];
+};
+
+/**
+ * @return {boolean}
+ */
+MyStack.prototype.empty = function() {
+    return this.queue1.length===0;
+};
+
+/**
+ * Your MyStack object will be instantiated and called as such:
+ * var obj = new MyStack()
+ * obj.push(x)
+ * var param_2 = obj.pop()
+ * var param_3 = obj.top()
+ * var param_4 = obj.empty()
+ */
+
+```
+
+方法二：一个队列
+
+```js
+var MyStack = function() {
+    this.queue=[];
+};
+
+/** 
+ * @param {number} x
+ * @return {void}
+ */
+MyStack.prototype.push = function(x) {
+    let n=this.queue.length;
+    this.queue.push(x);
+    for (let i=0;i<n;i++){
+        this.queue.push(this.queue.shift());
+    }
+};
+
+/**
+ * @return {number}
+ */
+MyStack.prototype.pop = function() {
+    return this.queue.shift();
+};
+
+/**
+ * @return {number}
+ */
+MyStack.prototype.top = function() {
+    return this.queue[0];
+};
+
+/**
+ * @return {boolean}
+ */
+MyStack.prototype.empty = function() {
+    return this.queue.length===0;
+};
+```
+
 
 
 ## 306.累加数
