--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -6144,6 +6144,65 @@ console.log(result);
 
 ```
 
+## 2006. 差的绝对值为 K 的数对数目
+
+给你一个整数数组 nums 和一个整数 k ，请你返回数对 (i, j) 的数目，满足 i < j 且 |nums[i] - nums[j]| == k 。
+
+|x| 的值定义为：
+
+如果 x >= 0 ，那么值为 x 。
+如果 x < 0 ，那么值为 -x 。
+
+提示：
+
+1 <= nums.length <= 200
+1 <= nums[i] <= 100
+1 <= k <= 99
+
+```js
+/**
+ * @param {number[]} nums
+ * @param {number} k
+ * @return {number}
+ */
+var countKDifference = function(nums, k) {
+    nums.sort((a,b)=>a-b);
+    let i=0;
+    let j=1;
+    let n=nums.length;
+    let result=0;
+    for(let i=0;i<n-1;i++){
+        for(let j=i+1;j<n;j++){
+            if (nums[j]-nums[i]===k) {
+                result+=1;
+            }
+            if (nums[j]-nums[i]>k) {
+                break;
+            }
+        }
+    }
+    return result;
+};
+
+let test=[1,2,2,1];
+let result=countKDifference(test,1);
+console.log(result);
+```
+
+哈希表 + 一次遍历
+
+```js
+var countKDifference = function(nums, k) {
+    let res = 0, n = nums.length;
+    const cnt = new Map();
+    for (let j = 0; j < n; ++j) {
+        res += (cnt.get(nums[j] - k) || 0) + (cnt.get(nums[j] + k) || 0);
+        cnt.set(nums[j], (cnt.get(nums[j]) || 0) + 1);
+    }
+    return res;
+};
+```
+
 
 
 ## 2022. 将一维数组转变成二维数组
