--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -4336,6 +4336,75 @@ MyStack.prototype.empty = function() {
 };
 ```
 
+## 226. 翻转二叉树
+
+给你一棵二叉树的根节点 root ，翻转这棵二叉树，并返回其根节点。
+
+递归
+
+```js
+/**
+ * Definition for a binary tree node.
+ * function TreeNode(val, left, right) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.left = (left===undefined ? null : left)
+ *     this.right = (right===undefined ? null : right)
+ * }
+ */
+/**
+ * @param {TreeNode} root
+ * @return {TreeNode}
+ */
+var invertTree = function(root) {
+    if (root===null) {
+        return root;
+    }
+    if (root.left || root.right) {
+        let temp=root.left;
+        root.left=root.right;
+        root.right=temp;
+        invertTree(root.left);
+        invertTree(root.right);
+    }
+    return root;
+};
+```
+
+```js
+var invertTree = function(root) {
+    if (root === null) {
+        return null;
+    }
+    const left = invertTree(root.left);
+    const right = invertTree(root.right);
+    root.left = right;
+    root.right = left;
+    return root;
+};
+```
+
+## 228. 汇总区间
+
+给定一个  无重复元素 的 有序 整数数组 nums 。
+
+返回 恰好覆盖数组中所有数字 的 最小有序 区间范围列表 。也就是说，nums 的每个元素都恰好被某个区间范围所覆盖，并且不存在属于某个范围但不属于 nums 的数字 x 。
+
+列表中的每个区间范围 [a,b] 应该按如下格式输出：
+
+"a->b" ，如果 a != b
+"a" ，如果 a == b
+
+提示：
+
+0 <= nums.length <= 20
+-231 <= nums[i] <= 231 - 1
+nums 中的所有值都 互不相同
+nums 按升序排列
+
+```
+
+```
+
 
 
 ## 306.累加数
