--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -4401,8 +4401,62 @@ var invertTree = function(root) {
 nums 中的所有值都 互不相同
 nums 按升序排列
 
+```js
+/**
+ * @param {number[]} nums
+ * @return {string[]}
+ */
+var summaryRanges = function(nums) {
+    if (nums.length===0) {
+        return [];
+    }
+    let i=0;
+    let j=1;
+    let result=[];
+    for(j;j<nums.length;j++){
+        if (nums[j]-nums[j-1]!==1) {
+            if (i===j-1) {
+                result.push(nums[i].toString());
+            }else{
+                result.push(nums[i].toString()+"->"+nums[j-1].toString());
+            }
+            i=j;
+        }
+    }
+    if (i===j-1) {
+        result.push(nums[i].toString());
+    }else{
+        result.push(nums[i].toString()+"->"+nums[j-1].toString());
+    }
+    return result;
+};
+
+let test=[0,1,2,4,5,7];
+let result=summaryRanges(test);
+console.log(result);
 ```
 
+```js
+var summaryRanges = function(nums) {
+    const ret = [];
+    let i = 0;
+    const n = nums.length;
+    while (i < n) {
+        const low = i;
+        i++;
+        while (i < n && nums[i] === nums[i - 1] + 1) {
+            i++;
+        }
+        const high = i - 1;
+        const temp = ['' + nums[low]];
+        if (low < high) {
+            temp.push('->');
+            temp.push('' + nums[high]);
+        }
+        ret.push(temp.join(''));
+    }
+    return ret;
+};
 ```
 
 
