--- a/力扣/力扣算法.md
+++ b/力扣/力扣算法.md
@@ -4459,6 +4459,244 @@ var summaryRanges = function(nums) {
 };
 ```
 
+## 231. 2 的幂
+
+给你一个整数 n，请你判断该整数是否是 2 的幂次方。如果是，返回 true ；否则，返回 false 。
+
+如果存在一个整数 x 使得 n == 2x ，则认为 n 是 2 的幂次方。
+
+进阶：你能够不使用循环/递归解决此问题吗？出处。
+
+```js
+/**
+ * @param {number} n
+ * @return {boolean}
+ */
+var isPowerOfTwo = function(n) {
+    if (n<=0) {
+        //小于等于0的不满足
+        return false;
+    }
+    while(n>=1){
+        if (n===1) {
+            return true;
+        }
+        if (n%2!==0) {
+            //如果不能被2整除则不满足
+            return false;
+        }
+        n=n/2;
+    }
+};
+
+let test=5;
+let result=isPowerOfTwo(test);
+console.log(result);
+```
+
+![2 的幂（二进制表示）](E:\pogject\学习笔记\image\leetcode\2 的幂（二进制表示）.png)
+
+判断是否为最大 2 的幂的约数
+
+```js
+var isPowerOfTwo = function(n) {
+    const BIG = 1 << 30;
+    return n > 0 && BIG % n === 0;
+};
+```
+
+## 232. 用栈实现队列
+
+请你仅使用两个栈实现先入先出队列。队列应当支持一般队列支持的所有操作（push、pop、peek、empty）：
+
+实现 MyQueue 类：
+
+void push(int x) 将元素 x 推到队列的末尾
+int pop() 从队列的开头移除并返回元素
+int peek() 返回队列开头的元素
+boolean empty() 如果队列为空，返回 true ；否则，返回 false
+说明：
+
+你 只能 使用标准的栈操作 —— 也就是只有 push to top, peek/pop from top, size, 和 is empty 操作是合法的。
+你所使用的语言也许不支持栈。你可以使用 list 或者 deque（双端队列）来模拟一个栈，只要是标准的栈操作即可。
+进阶：
+
+你能否实现每个操作均摊时间复杂度为 O(1) 的队列？换句话说，执行 n 个操作的总时间复杂度为 O(n) ，即使其中一个操作可能花费较长时间。
+
+```js
+var MyQueue = function() {
+    this.stack1=[];  //用于存储
+    this.stack2=[];  //用于反转元素的入队顺序
+};
+
+/** 
+ * @param {number} x
+ * @return {void}
+ */
+MyQueue.prototype.push = function(x) {
+    while(this.stack1.length>0){
+        //把栈1的所有元素弹出到栈2
+        this.stack2.push(this.stack1.pop());
+    }
+    this.stack1.push(x);  //进队列元素压到栈1底部
+    while(this.stack2.length>0){
+        //把栈2的所有元素弹出到栈1
+        this.stack1.push(this.stack2.pop());
+    }
+};
+
+/**
+ * @return {number}
+ */
+MyQueue.prototype.pop = function() {
+    return this.stack1.pop();
+};
+
+/**
+ * @return {number}
+ */
+MyQueue.prototype.peek = function() {
+    return this.stack1[this.stack1.length-1];
+};
+
+/**
+ * @return {boolean}
+ */
+MyQueue.prototype.empty = function() {
+    return this.stack1.length===0;
+};
+
+/**
+ * Your MyQueue object will be instantiated and called as such:
+ * var obj = new MyQueue()
+ * obj.push(x)
+ * var param_2 = obj.pop()
+ * var param_3 = obj.peek()
+ * var param_4 = obj.empty()
+ */
+```
+
+```js
+var MyQueue = function() {
+    this.stack1=[];  //用于存储
+    this.stack2=[];  //反转元素的入队顺序
+};
+
+/** 
+ * @param {number} x
+ * @return {void}
+ */
+MyQueue.prototype.push = function(x) {
+    while(this.stack1.length>0){
+        //把栈1的所有元素弹出到栈2
+        this.stack2.push(this.stack1.pop());
+    }
+    this.stack1.push(x);  //进队列元素压到栈1底部
+};
+
+/**
+ * @return {number}
+ */
+MyQueue.prototype.pop = function() {
+    while(this.stack2.length>0){
+        //把栈2的所有元素弹出到栈1
+        this.stack1.push(this.stack2.pop());
+    }
+    return this.stack1.pop();
+};
+
+/**
+ * @return {number}
+ */
+MyQueue.prototype.peek = function() {
+    while(this.stack2.length>0){
+        //把栈2的所有元素弹出到栈1
+        this.stack1.push(this.stack2.pop());
+    }
+    return this.stack1[this.stack1.length-1];
+};
+
+/**
+ * @return {boolean}
+ */
+MyQueue.prototype.empty = function() {
+    return this.stack1.length===0 && this.stack2.length===0;
+};
+
+/**
+ * Your MyQueue object will be instantiated and called as such:
+ * var obj = new MyQueue()
+ * obj.push(x)
+ * var param_2 = obj.pop()
+ * var param_3 = obj.peek()
+ * var param_4 = obj.empty()
+ */
+```
+
+## 234. 回文链表
+
+给你一个单链表的头节点 head ，请你判断该链表是否为回文链表。如果是，返回 true ；否则，返回 false 。
+提示：
+
+链表中节点数目在范围[1, 105] 内
+0 <= Node.val <= 9
+
+进阶：你能否用 O(n) 时间复杂度和 O(1) 空间复杂度解决此题？
+
+```js
+/**
+ * Definition for singly-linked list.
+ * function ListNode(val, next) {
+ *     this.val = (val===undefined ? 0 : val)
+ *     this.next = (next===undefined ? null : next)
+ * }
+ */
+/**
+ * @param {ListNode} head
+ * @return {boolean}
+ */
+var isPalindrome = function(head) {
+    let nums=[];
+    while(head!==null){
+        nums.push(head.val);
+        head=head.next;
+    }
+    let n=nums.length;
+    let m=n>>1;
+    for(let i=0;i<m;i++){
+        if (nums[i]!==nums[n-1-i]) {
+            return false;
+        }
+    }
+    return true;
+
+};
+```
+
+递归
+
+```js
+let frontPointer;
+
+const recursivelyCheck = (currentNode) => {
+    if (currentNode !== null) {
+        if (!recursivelyCheck(currentNode.next)) {
+            return false;
+        }
+        if (currentNode.val !== frontPointer.val) {
+            return false;
+        }
+        frontPointer = frontPointer.next;
+    }
+    return true;
+}
+
+var isPalindrome = function(head) {
+    frontPointer = head;
+    return recursivelyCheck(head);
+};
+```
+
 
 
 ## 306.累加数
