--- a/学习记录.md
+++ b/学习记录.md
@@ -96,3 +96,6 @@ axios , js文件读取
 
 力扣：差的绝对值为 K 的数对数目(哈希表 + 一次遍历)，翻转二叉树（递归），汇总区间(双指针一次遍历) ，2 的幂（二进制表示）（判断是否为最大 2 的幂的约数），用栈实现队列 ，回文链表（递归，双指针）.
 
+2022.02.10
+
+力扣：最简分数，
